# model-prisoners-dilemma

./: .gitignore  CMakeLists.txt  README.md  grid_log.csv
config/: experiment_01_config.json  experiment_02_config.json  experiment_03_config.json  plc_test.csv  prisoners_config.json  tamper_attacker_test.csv  test_cvc_config.json  test_cvd_config.json  test_dvd_config.json
experiments/: CMakeLists.txt  main.cpp
include/: constants.hpp  prisoner_cell.hpp  prisoner_state.hpp
src/: CMakeLists.txt  main.cpp
src/include/: player_cell.hpp  player_state.hpp  prisoner_cell.hpp  prisoner_state.hpp
